Кардио + стринг к нему + res к нему

--- a/app/src/main/res/layout/fragment_heart.xml
+++ b/app/src/main/res/layout/fragment_heart.xml
@@ -44,4 +44,304 @@
         android:textColor="@color/textcolor_black"
         />
 
+    <TextView
+        style="@style/zagalovok1"
+        android:id="@+id/measurements"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/wentBack"
+        android:layout_marginTop="29dp"
+        android:layout_marginStart="25dp"
+        android:text="@string/measurements"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <ImageButton
+        android:id="@+id/pressure_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/measurements"
+        app:layout_constraintEnd_toStartOf="@id/up"
+        android:layout_marginTop="22dp"
+        android:src="@drawable/input_pressure"
+        android:background="@android:color/transparent"
+        />
+
+    <EditText
+        style="@style/tint1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/pressure_box"
+        app:layout_constraintTop_toTopOf="@id/pressure_box"
+        app:layout_constraintEnd_toEndOf="@id/pressure_box"
+        app:layout_constraintBottom_toBottomOf="@id/pressure_box"
+        android:paddingStart="10dp"
+        android:background="@android:color/transparent"
+        android:text="@string/input_pressure"
+        android:textColor="@color/tint_color"
+        />
+
+    <ImageButton
+        android:id="@+id/up"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/pressure_box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/pressure_box"
+        android:src="@drawable/girth_box"
+        android:background="@android:color/transparent"
+        />
+
+    <EditText
+        style="@style/tint1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/up"
+        app:layout_constraintEnd_toEndOf="@id/up"
+        app:layout_constraintTop_toTopOf="@id/up"
+        app:layout_constraintBottom_toBottomOf="@id/up"
+        android:paddingStart="10dp"
+        android:background="@android:color/transparent"
+        android:text="@string/up_pressure"
+        android:textColor="@color/tint_color"
+        />
+
+    <ImageButton
+        android:id="@+id/down"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/pressure_box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/pressure_box"
+        android:src="@drawable/girth_box"
+        android:background="@android:color/transparent"
+        />
+
+    <EditText
+        style="@style/tint1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/down"
+        app:layout_constraintEnd_toEndOf="@id/down"
+        app:layout_constraintTop_toTopOf="@id/down"
+        app:layout_constraintBottom_toBottomOf="@id/down"
+        android:paddingStart="10dp"
+        android:background="@android:color/transparent"
+        android:text="@string/down_pressure"
+        android:textColor="@color/tint_color"
+        />
+
+    <ImageButton
+        android:id="@+id/pulse_box"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pressure_box"
+        app:layout_constraintEnd_toStartOf="@id/pulse_per_min"
+        android:layout_marginTop="23dp"
+        android:src="@drawable/input_pressure"
+        android:background="@android:color/transparent"
+        />
+
+    <EditText
+        style="@style/tint1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/pulse_box"
+        app:layout_constraintTop_toTopOf="@id/pulse_box"
+        app:layout_constraintEnd_toEndOf="@id/pulse_box"
+        app:layout_constraintBottom_toBottomOf="@id/pulse_box"
+        android:paddingStart="10dp"
+        android:background="@android:color/transparent"
+        android:text="@string/input_pulse"
+        android:textColor="@color/tint_color"
+        />
+
+    <ImageButton
+        android:id="@+id/pulse_per_min"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toEndOf="@id/pulse_box"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/pulse_box"
+        android:src="@drawable/pulse_per_min"
+        android:background="@android:color/transparent"
+        />
+
+    <TextView
+        style="@style/zagalovok1"
+        android:id="@+id/comp_with_norm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/pulse_box"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="22dp"
+        android:text="@string/comp_with_norm"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <ImageView
+        android:id="@+id/ur"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/comp_with_norm"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/norm"
+        android:layout_marginTop="23dp"
+        android:src="@drawable/ur_norm"
+        android:background="@android:color/transparent"
+        />
+
+    <TextView
+        style="@style/tint1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/ur"
+        app:layout_constraintEnd_toEndOf="@id/ur"
+        app:layout_constraintTop_toTopOf="@id/ur"
+        app:layout_constraintBottom_toBottomOf="@id/ur"
+        android:text="@string/yours"
+        android:textColor="@color/textcolor_black"
+        android:gravity="center"
+        />
+
+
+    <ImageView
+        android:id="@+id/norm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/ur"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/ur"
+        android:src="@drawable/ur_norm"
+        android:background="@android:color/transparent"
+        />
+
+    <TextView
+        style="@style/tint1"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/norm"
+        app:layout_constraintEnd_toEndOf="@id/norm"
+        app:layout_constraintTop_toTopOf="@id/norm"
+        app:layout_constraintBottom_toBottomOf="@id/norm"
+        android:text="@string/norm"
+        android:textColor="@color/textcolor_black"
+        android:gravity="center"
+        />
+
+    <ImageView
+        android:id="@+id/ur_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/ur"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/norm_data"
+        android:layout_marginTop="19dp"
+        android:src="@drawable/ur_norm_data"
+        android:background="@android:color/transparent"
+        />
+
+    <ImageView
+        android:id="@+id/norm_data"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/ur_data"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/ur_data"
+        android:src="@drawable/ur_norm_data"
+        android:background="@android:color/transparent"
+        />
+
+    <EditText
+        style="@style/tint1"
+        android:id="@+id/ur1"
+        android:layout_width="108dp"
+        android:layout_height="36dp"
+        app:layout_constraintStart_toStartOf="@id/ur_data"
+        app:layout_constraintTop_toTopOf="@id/ur_data"
+        app:layout_constraintEnd_toEndOf="@id/ur_data"
+        app:layout_constraintBottom_toTopOf="@id/ur2"
+        android:paddingStart="10dp"
+        android:background="@android:color/transparent"
+        android:text="xxx"
+        android:textColor="@color/tint_color"
+        />
+
+    <EditText
+        style="@style/tint1"
+        android:id="@+id/ur2"
+        android:layout_width="108dp"
+        android:layout_height="36dp"
+        app:layout_constraintStart_toStartOf="@id/ur_data"
+        app:layout_constraintTop_toBottomOf="@id/ur1"
+        app:layout_constraintEnd_toEndOf="@id/ur_data"
+        app:layout_constraintBottom_toTopOf="@id/ur3"
+        android:paddingStart="10dp"
+        android:background="@android:color/transparent"
+        android:text="xxx"
+        android:textColor="@color/tint_color"
+        />
+
+    <EditText
+        style="@style/tint1"
+        android:id="@+id/ur3"
+        android:layout_width="108dp"
+        android:layout_height="36dp"
+        app:layout_constraintStart_toStartOf="@id/ur_data"
+        app:layout_constraintTop_toBottomOf="@id/ur2"
+        app:layout_constraintEnd_toEndOf="@id/ur_data"
+        android:paddingStart="10dp"
+        android:background="@android:color/transparent"
+        android:text="xxx"
+        android:textColor="@color/tint_color"
+        />
+
+    <TextView
+        style="@style/tint1"
+        android:id="@+id/norm1"
+        android:layout_width="108dp"
+        android:layout_height="36dp"
+        app:layout_constraintStart_toStartOf="@id/norm_data"
+        app:layout_constraintTop_toTopOf="@id/norm_data"
+        app:layout_constraintEnd_toEndOf="@id/norm_data"
+        app:layout_constraintBottom_toTopOf="@id/norm2"
+        android:paddingStart="10dp"
+        android:text="120"
+        android:gravity="center_vertical"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <TextView
+        style="@style/tint1"
+        android:id="@+id/norm2"
+        android:layout_width="108dp"
+        android:layout_height="36dp"
+        app:layout_constraintStart_toStartOf="@id/norm_data"
+        app:layout_constraintTop_toBottomOf="@id/norm1"
+        app:layout_constraintEnd_toEndOf="@id/norm_data"
+        app:layout_constraintBottom_toTopOf="@id/norm3"
+        android:paddingStart="10dp"
+        android:gravity="center_vertical"
+        android:text="80"
+        android:textColor="@color/textcolor_black"
+        />
+
+    <TextView
+        style="@style/tint1"
+        android:id="@+id/norm3"
+        android:layout_width="108dp"
+        android:layout_height="36dp"
+        app:layout_constraintStart_toStartOf="@id/norm_data"
+        app:layout_constraintTop_toBottomOf="@id/norm2"
+        app:layout_constraintEnd_toEndOf="@id/norm_data"
+        android:paddingStart="10dp"
+        android:gravity="center_vertical"
+        android:text="60"
+        android:textColor="@color/textcolor_black"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
