--- a/app/src/main/res/layout/fragment_medicines.xml
+++ b/app/src/main/res/layout/fragment_medicines.xml
@@ -7,28 +7,42 @@
     tools:context=".view.medicinesFragment"
     android:background="@drawable/background">
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/margin_medicines"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_begin="15dp"
+        />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/margin_margin_medicines2"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintGuide_end="15dp"
+        />
+
     <ImageButton
         android:id="@+id/wentBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@id/margin_medicines"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/arrow_left"
         android:background="@android:color/transparent"
         android:layout_marginTop="30dp"
-        android:layout_marginStart="25dp"
         />
 
     <ImageButton
         android:id="@+id/profile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/margin_margin_medicines2"
         app:layout_constraintTop_toTopOf="parent"
         android:src="@drawable/icon_profile"
         android:background="@android:color/transparent"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="25dp"
         />
 
     <TextView
@@ -43,5 +57,76 @@
         android:text="@string/pills"
         android:textColor="@color/textcolor_black"
         />
+
+    <TextView
+        style="@style/zagalovok2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/addMedicines"
+        android:textColor="@color/textcolor_white"
+        />
+
+    <ScrollView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintStart_toStartOf="@id/margin_medicines"
+        app:layout_constraintEnd_toEndOf="@id/margin_margin_medicines2"
+        app:layout_constraintTop_toBottomOf="@id/settingsText"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="20dp">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerViewMedicines"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </ScrollView>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@id/margin_medicines"
+        app:layout_constraintEnd_toEndOf="@id/margin_margin_medicines2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="15dp">
+
+        <ImageButton
+            android:id="@+id/addNewMedicines"
+            android:layout_width="0dp"
+            android:layout_height="53dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@drawable/button"
+            />
+
+        <TextView
+            style="@style/zagalovok2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="@id/addNewMedicines"
+            app:layout_constraintTop_toTopOf="@id/addNewMedicines"
+            app:layout_constraintEnd_toEndOf="@id/addNewMedicines"
+            app:layout_constraintBottom_toBottomOf="@id/addNewMedicines"
+            android:text="@string/add"
+            android:textColor="@color/textcolor_white"
+            />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
